# operating_system_and_network_learning_for_backend-

./: .gitignore  CLAUDE.md  README.md  learning_objective.md
chapter_01_foundation/: README.md  checkpoint.md
chapter_01_foundation/01_rust_fundamentals/: theory.md
chapter_01_foundation/02_linux_basics/: theory.md
chapter_02_os/: README.md  checkpoint.md
chapter_02_os/01_process_thread/: theory.md
chapter_03_network/: README.md  checkpoint.md
chapter_04_database/: README.md  checkpoint.md
chapter_05_distributed/: README.md  checkpoint.md
chapter_06_project/: README.md  checkpoint.md
chapter_06_project/01_rest_service/lab_02_database_integration/: Cargo.toml
chapter_06_project/01_rest_service/lab_02_database_integration/problem/: main.rs
chapter_06_project/01_rest_service/lab_02_database_integration/solution/: main.rs
chapter_06_project/01_rest_service/lab_02_database_integration/tests/: test_db.rs
chapter_06_project/02_observability/lab_04_prometheus_metrics/: Cargo.toml
chapter_06_project/02_observability/lab_04_prometheus_metrics/problem/: main.rs
chapter_06_project/02_observability/lab_04_prometheus_metrics/solution/: main.rs
chapter_06_project/02_observability/lab_04_prometheus_metrics/tests/: test_metrics.rs
chapter_06_project/03_performance/lab_05_load_testing/: Cargo.toml
chapter_06_project/03_performance/lab_05_load_testing/solution/: main.rs
chapter_06_project/03_performance/lab_05_load_testing/src/: main.rs  server.rs
chapter_06_project/03_performance/lab_05_load_testing/tests/: test_load.rs
(+138 files in other folders)
