[package]
name = "lab_04_prometheus_metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
