[package]
name = "lab_05_load_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "load_tester"
path = "src/main.rs"

[[bin]]
name = "target_server"
path = "src/server.rs"
